Fri Dec 26 15:09:27 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c (nkf_iconv_t): fix a missing semicolon.
	  reported by Denis Denisov <denji0k AT gmail.com>.

	* process.c (rb_spawn_process): get rid of usage of uninitialized
	  variable.
	  reported by Denis Denisov <denji0k AT gmail.com>.

	* regexec.c (match_at): ditto.

	* ext/win32ole/win32ole.c (ole_wc2mb_alloc, ole_vstr2wc, ole_mb2wc):
	  ditto.

	* dir.c (ruby_glob0): no need to check never-NULL pointer.
	  reported by Denis Denisov <denji0k AT gmail.com>.

	* win32/file.c (rb_file_expand_path_internal): ditto.

	* win32/file.c (code_page_i): handle realloc failure.
	  reported by Denis Denisov <denji0k AT gmail.com>.

	* win32/stub.c (stub_sysinit): ditto.

	* fix printf format conversion specifiers.
	  reported by Denis Denisov <denji0k AT gmail.com>.

Fri Dec 26 01:41:40 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/rbinstall.rb: skip installing bundle gems if zlib is unavailable.
	  [Bug #10647] [ruby-dev:48787]

Fri Dec 26 01:24:42 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/downloader.rb: support old versions of ruby.

	* tool/downloader.rb: now can download gems by http if openssl is not
	  available (this may be danger!)

Fri Dec 26 00:13:48 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_extlibs.rb: check existence of extension libraries
	  which not depend on outer libraries. (experimental)

Thu Dec 25 21:58:15 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/fiddle/extconf.rb: make PIC objects if it will be linked as
	  a shared object eventually.  [ruby-core:67128]

Thu Dec 25 19:01:13 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/fiddle/win32/libffi-3.2.1-mswin.patch: support mswin32.

Thu Dec 25 17:30:40 2014  Naohisa Goto  <ngotogenome@gmail.com>

	* gc.c (wmap_final_func): fix memory size shortage when realloc wmap.
	  Fix SEGV during finilize of WeakRef on Solaris (though the SEGV