@@ -1,4 +1,8 @@
-Fri Dec 26 15:09:27 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Fri Dec 26 15:13:13 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/json/parser/parser.rl (unescape_unicode): check if valid
+	  before bit-or assignments.
+	  reported by Denis Denisov <denji0k AT gmail.com>.
 
 	* ext/nkf/nkf-utf8/nkf.c (nkf_iconv_t): fix a missing semicolon.
 	  reported by Denis Denisov <denji0k AT gmail.com>.
